syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);

	rpc GetCustomers(NewCustomerRequest) returns (stream CustomerModel);
}

message CustomerLookupModel {
	int32 userid = 1;
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive=4;
	int32 age=5;
}

message NewCustomerRequest {

}
